--- a/Phone Number Validator/Base.lproj/Main.storyboard
+++ b/Phone Number Validator/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="E7I-KN-V1V">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Phone Number Validator-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="WelcomeViewController" customModule="Phone_Number_Validator" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,151 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Click Button Below to validate a phone number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bn6-y0-bl6">
+                                <rect key="frame" x="122" y="200" width="356" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BRE-NW-5fA">
+                                <rect key="frame" x="198" y="285" width="204" height="30"/>
+                                <color key="backgroundColor" red="0.88634093535442393" green="0.97387784085778228" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="204" id="nG6-JP-24R"/>
+                                </constraints>
+                                <state key="normal" title="Validate Phone Number"/>
+                                <connections>
+                                    <segue destination="6w4-7g-W3u" kind="show" id="86c-Al-jGD"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="BRE-NW-5fA" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="BMX-1F-lhG"/>
+                            <constraint firstItem="BRE-NW-5fA" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="I4d-jW-clC"/>
+                            <constraint firstItem="Bn6-y0-bl6" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-89.5" id="ZP4-An-XOr"/>
+                            <constraint firstItem="Bn6-y0-bl6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dC2-UB-VkN"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Phone Number Validator" id="qTQ-5R-6V9">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="jtQ-7e-F9c"/>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1219" y="329"/>
+        </scene>
+        <!--Phone Number Validator-->
+        <scene sceneID="rHm-b3-hGI">
+            <objects>
+                <viewController id="6w4-7g-W3u" customClass="ValidatorViewController" customModule="Phone_Number_Validator" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="2xC-V4-K9k"/>
+                        <viewControllerLayoutGuide type="bottom" id="vAj-WD-IRV"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="wxK-Lp-31a">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="Enter Phone Number" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hs7-gh-H8W" customClass="PhoneNumberTextField" customModule="PhoneNumberKit">
+                                <rect key="frame" x="189" y="173" width="244" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="244" id="BkF-Z9-yeq"/>
+                                </constraints>
+                                <attributedString key="attributedText"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="next" enablesReturnKeyAutomatically="YES"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LHY-hX-Wwn">
+                                <rect key="frame" x="272" y="285" width="55" height="30"/>
+                                <state key="normal" title="Validate"/>
+                                <connections>
+                                    <action selector="validatePhoneNumber:" destination="6w4-7g-W3u" eventType="touchUpInside" id="jgV-eb-mQz"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="LHY-hX-Wwn" firstAttribute="centerY" secondItem="wxK-Lp-31a" secondAttribute="centerY" id="8Eh-0s-MaY"/>
+                            <constraint firstItem="hs7-gh-H8W" firstAttribute="centerY" secondItem="wxK-Lp-31a" secondAttribute="centerY" constant="-112" id="JNa-iS-G0Q"/>
+                            <constraint firstItem="hs7-gh-H8W" firstAttribute="centerX" secondItem="wxK-Lp-31a" secondAttribute="centerX" constant="11" id="rTl-wX-Fum"/>
+                            <constraint firstItem="LHY-hX-Wwn" firstAttribute="centerX" secondItem="wxK-Lp-31a" secondAttribute="centerX" id="svu-ds-OpA"/>
+                        </constraints>
+                    </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Phone Number Validator" id="rIw-r8-eKO">
+                        <barButtonItem key="rightBarButtonItem" title="About" id="csi-k5-nM1">
+                            <connections>
+                                <segue destination="kU2-Jl-Fey" kind="show" id="rw5-gU-eji"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="phoneNumberTextField" destination="hs7-gh-H8W" id="jMo-ET-kXm"/>
+                        <outlet property="validateButton" destination="LHY-hX-Wwn" id="Jdy-nC-Kbe"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fg1-v3-J5r" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2193" y="329"/>
+        </scene>
+        <!--About-->
+        <scene sceneID="VoC-An-djU">
+            <objects>
+                <viewController id="kU2-Jl-Fey" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xFK-Bo-Tcl"/>
+                        <viewControllerLayoutGuide type="bottom" id="Hxg-UD-9wh"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="lbG-xO-prV">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="GG4-YZ-daj">
+                                <rect key="frame" x="180" y="151" width="241" height="84"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="241" id="vR8-mr-fi7"/>
+                                </constraints>
+                                <string key="text">Phone Number Validator                Author @ Rohit Pal
+Copyright © 2016 Rohit Pal.           All rights reserved.                  </string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="GG4-YZ-daj" firstAttribute="centerY" secondItem="lbG-xO-prV" secondAttribute="centerY" constant="-107" id="DbV-vN-mR7"/>
+                            <constraint firstItem="GG4-YZ-daj" firstAttribute="top" secondItem="xFK-Bo-Tcl" secondAttribute="bottom" constant="87" id="IKN-zH-yAt"/>
+                            <constraint firstItem="GG4-YZ-daj" firstAttribute="centerX" secondItem="lbG-xO-prV" secondAttribute="centerX" id="s6O-rN-NE7"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="About" id="hBR-08-mgF">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="I9f-nC-DyK"/>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1bd-Gt-DLg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3215" y="329"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="6EE-ga-bUC">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="E7I-KN-V1V" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="69i-xe-R2H">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="i6p-Db-eIp"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rtr-0R-1Kh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="407" y="329"/>
         </scene>
     </scenes>
 </document>
